Fixed some width and spacing for the input form in newsletter section.

--- a/scss/_newsletter_section.scss
+++ b/scss/_newsletter_section.scss
@@ -88,10 +88,10 @@ label {
     }
 
     .newsletter__form {
-        height: 32px;
+        width: 60%;
         margin-inline-start: -148px;
         margin-block-start: 20px;
-        padding-inline-end: 178px;
+        height: 32px;
     }
 
     .form_container {
